# Besti-ez

./: .gitignore  TESTING_STRATEGY.md
backend/: backend.db  pyproject.toml  setup_database.py  test.db
backend/backend/: app.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  config.js  index.js
frontend/src/components/: Header.js  ProfileDetail.js  ProfileList.js  RemindersSection.js  SuggestionsSection.js
